--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       </div>
 
       <div class="intro-info">
-        <h2>We provide<br><span>solutions</span><br>for your business!</h2>
+        <h2>¡Brinadamos<br><span>soluciones</span><br>para tu negocio!</h2>
         <div>
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
-          <a href="#services" class="btn-services scrollto">Our Services</a>
+          <a href="#about" class="btn-get-started scrollto">Conocenos</a>
+          <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
         </div>
       </div>
 
