--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="intro-info">
-        <h2>¡Brinadamos<br><span>soluciones</span><br>para tu negocio!</h2>
+        <h2>¡Brindamos<br><span>soluciones</span><br>para tu negocio!</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Conocenos</a>
           <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
@@ -366,26 +366,37 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </header>
 
-      <div class="row about-container">
+      <div class="row about-container ">
 
-        <div class="col-lg-8 content order-lg-1 order-2">
-          <div class="icon-box wow fadeInUp">
-            <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+        <div class="col-lg-8 content order-lg-1 order-2 box-images">
+          <div class="icon-box-img">
+            <div class="col-md-6 col-lg-5">
+              <img src="./img/portfolio/card1.jpg" class="img-fluid" alt="">
+            </div>
+            <div>
+              <h4 class="title"><a href="">Eiusmod Tempor</a></h4><br>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
           </div>
 
-          <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-            <div class="icon"><i class="fa fa-photo"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          <div class="icon-box-img" data-wow-delay="0.2s">
+            <div class="col-md-6 col-lg-5">
+              <img src="./img/portfolio/web3.jpg" class="img-fluid" alt="">
+            </div>
+            <div>
+              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
           </div>
-
-          <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-            <div class="icon"><i class="fa fa-bar-chart"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
+          <div class="icon-box-img" data-wow-delay="0.4s">
+            <div class="col-md-6 col-lg-5">
+              <img src="./img/portfolio/app3.jpg" class="img-fluid" alt="">
+            </div>
+            <div>
+              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+           </div>
         </div>
     </div>
   </section><!-- blog -->
