--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-        <a href="#intro" class="scrollto"><img src="./img/LogoArgProgr0.png" alt="" class="img-fluid"></a>
-        <a href="#intro" class="scrollto"><img src="./img/logofacenaUnse.png" alt="" class="img-fluid img-fluid2"></a>
+        <a href="#intro" class="scrollto"><img src="./img/logo.png" alt="" class="img-fluid"></a>
+        <a href="#intro" class="scrollto"><img src="./img/LogoFacultadCsExactas.png" alt="" class="img-fluid img-fluid2"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
