Adjunto fotos a img y modifiqué seccion servicios

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <div class="icon">
                 <img src="./img/Cocina.jpg" alt=""></div>
               <h4 class="title"><a href="">Cocinas</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Con nosotros lograrás tener moblamientos a medida diseñados con los más altos estandares de calidad y durabilidad</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
@@ -173,7 +173,7 @@
                 <img src="./img/SalaEstar .jpg" alt="">
               </div>
               <h4 class="title"><a href="">Sala de estar</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Logramos dinamizar tus espacio con diferentes tonalidades para optimizar tus ambientes.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
@@ -182,7 +182,7 @@
                 <img src="./img/Dormitorio.jpg" alt="">
               </div>
               <h4 class="title"><a href="">Dormitorios</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description"> A la hora de decorar tu dormitorio, pensaremos en un diseño único, funcional y especial para tí.</p>
             </div>
           </div>
         </div>
@@ -373,7 +373,7 @@
 
       <header class="section-header">
         <h3>Blog</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Aquí podrás disfrutar de nuestros diseños.</p>
       </header>
 
       <div class="row about-container ">
