--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
             <img src="img/DiseñoInt2.jpg" class="img-fluid" alt="">
+            <img src="img/DiseñoInt1.jpg" class="img-fluid" alt="">
           </div>
         </div>
 
@@ -378,33 +379,33 @@
 
       <div class="row about-container ">
 
-        <div class="col-lg-8 content order-lg-1 order-2 box-images">
+        <div class="col-lg-10 content order-lg-1 order-2 box-images">
           <div class="icon-box-img">
-            <div class="col-md-6 col-lg-5">
-              <img src="./img/portfolio/card1.jpg" class="img-fluid" alt="">
+            <div class="col-md-6 col-lg-6">
+              <img src="./img/cocinaRustica.jpg" class="img-fluid" alt="">
             </div>
             <div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4><br>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Cocina Rústica</a></h4><br>
+              <p class="description">El aroma hogareño se percibe en esta cálida cocina rústica donde la madera se impone con su ímpetu de naturaleza.</p>
             </div>
           </div>
 
           <div class="icon-box-img" data-wow-delay="0.2s">
-            <div class="col-md-6 col-lg-5">
-              <img src="./img/portfolio/web3.jpg" class="img-fluid" alt="">
+            <div class="col-md-6 col-lg-6">
+              <img src="./img/BañoMinimalista.jpg" class="img-fluid" alt="">
             </div>
             <div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Baño Minimalista</a></h4>
+              <p class="description">La belleza de la simpleza del estilo minimalista se refleja en este espacio del hogar entrelazado en su estilo con los otros ambientes.</p>
             </div>
           </div>
           <div class="icon-box-img" data-wow-delay="0.4s">
-            <div class="col-md-6 col-lg-5">
-              <img src="./img/portfolio/app3.jpg" class="img-fluid" alt="">
+            <div class="col-md-6 col-lg-6">
+              <img src="./img/SalaNordica.jpg" class="img-fluid" alt="">
             </div>
             <div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Sala Nórdica </a></h4>
+              <p class="description">Los cálidos colores de este ambiente, son sinónimo de luz y armonía en nuestro diseño de esta sala de estar, ideal para compartir hermosos momentos.</p>
             </div>
            </div>
         </div>
