Añado fotos, estilos y otros

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
           <li class="active"><a href="#intro">inicio</a></li>
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#services">Servicios</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#team">Equipo</a></li>
           <li><a href="#contact">Contacto</a></li>
-          <li><a href="#blog">Blog</a></li>
+          
         </ul>
       </nav><!-- .main-nav -->
       
@@ -74,11 +75,11 @@
     <div class="container">
 
       <div class="intro-img">
-        <img src="img/intro-img.svg" alt="" class="img-fluid">
+        <img src="img/estudio-diseno.avif" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
-        <h2>¡Brindamos<br><span>soluciones</span><br>para tu negocio!</h2>
+        <h2>¡Brindamos<br><span>soluciones</span><br>para tu hogar!</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Conocenos</a>
           <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
@@ -190,6 +191,49 @@
       </div>
     </section><!-- #services -->
 
+    <section id="blog">
+      <div class="container">
+  
+        <header class="section-header">
+          <h3>Blog</h3>
+          <p>Aquí podrás disfrutar de nuestros diseños.</p>
+        </header>
+  
+        <div class="row about-container" style="background-color:#e4d0f7 ;" ;>
+  
+          <div class="col-lg-10 content order-lg-1 order-2 box-images">
+            <div class="icon-box-img">
+              <div class="col-md-6 col-lg-4">
+                <img src="./img/cocinaRustica.jpg" class="img-fluid" alt="">
+              </div>
+              <div>
+                <h4 class="title"><a href="">Cocina Rústica</a></h4><br>
+                <p class="description">El aroma hogareño se percibe en esta cálida cocina rústica donde la madera se impone con su ímpetu de naturaleza.</p>
+              </div>
+            </div>
+  
+            <div class="icon-box-img" data-wow-delay="0.2s">
+              <div>
+                <h4 class="title"><a href="">Baño Minimalista</a></h4>
+                <p class="description">La belleza de la simpleza del estilo minimalista se refleja en este espacio del hogar entrelazado en su estilo con los otros ambientes.</p>
+              </div>
+              <div class="col-md-6 col-lg-4">
+                <img src="./img/BañoMinimalista.jpg" class="img-fluid" alt="">
+              </div>
+            </div>
+            <div class="icon-box-img" data-wow-delay="0.4s">
+              <div class="col-md-6 col-lg-4">
+                <img src="./img/SalaNordica.jpg" class="img-fluid" alt="">
+              </div>
+              <div>
+                <h4 class="title"><a href="">Sala Nórdica </a></h4>
+                <p class="description">Los cálidos colores de este ambiente, son sinónimo de luz y armonía en nuestro diseño de esta sala de estar, ideal para compartir hermosos momentos.</p>
+              </div>
+             </div>
+          </div>
+      </div>
+    </section><!-- blog -->
+  
     <!--==========================
       Why Us Section
     ============================-->
@@ -369,48 +413,6 @@
     Blog
   ============================-->
 
-  <section id="blog">
-    <div class="container">
-
-      <header class="section-header">
-        <h3>Blog</h3>
-        <p>Aquí podrás disfrutar de nuestros diseños.</p>
-      </header>
-
-      <div class="row about-container ">
-
-        <div class="col-lg-10 content order-lg-1 order-2 box-images">
-          <div class="icon-box-img">
-            <div class="col-md-6 col-lg-6">
-              <img src="./img/cocinaRustica.jpg" class="img-fluid" alt="">
-            </div>
-            <div>
-              <h4 class="title"><a href="">Cocina Rústica</a></h4><br>
-              <p class="description">El aroma hogareño se percibe en esta cálida cocina rústica donde la madera se impone con su ímpetu de naturaleza.</p>
-            </div>
-          </div>
-
-          <div class="icon-box-img" data-wow-delay="0.2s">
-            <div class="col-md-6 col-lg-6">
-              <img src="./img/BañoMinimalista.jpg" class="img-fluid" alt="">
-            </div>
-            <div>
-              <h4 class="title"><a href="">Baño Minimalista</a></h4>
-              <p class="description">La belleza de la simpleza del estilo minimalista se refleja en este espacio del hogar entrelazado en su estilo con los otros ambientes.</p>
-            </div>
-          </div>
-          <div class="icon-box-img" data-wow-delay="0.4s">
-            <div class="col-md-6 col-lg-6">
-              <img src="./img/SalaNordica.jpg" class="img-fluid" alt="">
-            </div>
-            <div>
-              <h4 class="title"><a href="">Sala Nórdica </a></h4>
-              <p class="description">Los cálidos colores de este ambiente, son sinónimo de luz y armonía en nuestro diseño de esta sala de estar, ideal para compartir hermosos momentos.</p>
-            </div>
-           </div>
-        </div>
-    </div>
-  </section><!-- blog -->
 
   <!--==========================
     Footer
