Añadí index.js para input Bienvenida

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="./index.js"></script>
   <meta charset="utf-8">
   <title>NewBiz Bootstrap Template</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -77,6 +78,13 @@
       <div class="intro-img">
         <img src="img/estudio-diseno.avif" alt="" class="img-fluid">
       </div>
+
+      <div>
+        <form action="">
+        <input type="text" id="nombre" value="Ingrese su nombre">
+        <button onclick="bienvenida()">Saludo de Bienvenida!!</button> 
+        </form>
+      </div><br><br><br>
 
       <div class="intro-info">
         <h2>¡Brindamos<br><span>soluciones</span><br>para tu hogar!</h2>
