Añadí estilos y mapa para seccion contacto

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
   <section id="intro" class="clearfix">
     <div class="container">
 
-      <div class="intro-img">
-        <img src="img/estudio-diseno.avif" alt="" class="img-fluid">
-      </div>
-
-      <div>
+      <div id="input-button-container">
         <form action="">
-        <input type="text" id="nombre" value="Ingrese su nombre">
+        <input type="text" id="nombre" value="Ingrese su nombre y presione aquí=>">
         <button onclick="bienvenida()">Saludo de Bienvenida!!</button> 
         </form>
-      </div><br><br><br>
+      </div><br><br>
+
+      <div class="intro-img">
+        <img src="img/estudio-diseno.avif" alt="" class="img-fluid">
+      </div>      
 
       <div class="intro-info">
         <h2>¡Brindamos<br><span>soluciones</span><br>para tu hogar!</h2>
