--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             </p>
 
             <div class="icon-box wow fadeInUp">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+              <div class="icon"><i class="fa fa-coffee"></i></div>
               <h4 class="title"><a href="">Estilo Nórdico</a></h4>
               <p class="description">El origen de este estilo se encuentra en Noruega, Suecia, Finlandia y Dinamarca, donde los días soleados escasean. Para sustituir esa falta de luz, predominan colores claros y elementos relacionados con la naturaleza.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-photo"></i></div>
+              <div class="icon"><i class="fa fa-leaf"></i></div>
               <h4 class="title"><a href="">Rústico o farm house</a></h4>
               <p class="description">La intención de este estilo es traer la naturaleza al interior para crear casas rurales que transmitan armonía, bienestar y confort.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <div class="icon"><i class="fa fa-calculator"></i></div>
               <h4 class="title"><a href="">Estilo Industrial</a></h4>
               <p class="description">También conocido como urbano, se inspira en un almacén o en un loft de las grandes ciudades en la década del 50. Abundaban vigas, ladrillos y hormigón.</p>
             </div>
@@ -363,7 +363,8 @@
 
           <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
+       <!-- google maps. Opcion compartir. Luego opcion "incorporar un mapa" -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.9566882247564!2d-64.50560282695409!3d-31.41531937426216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d66154ac06359%3A0x97bd4532d631b00b!2sReloj%20Cuc%C3%BA!5e0!3m2!1ses-419!2sar!4v1688671222554!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
             </div>
           </div>
 
@@ -371,7 +372,7 @@
             <div class="row">
               <div class="col-md-5 info">
                 <i class="ion-ios-location-outline"></i>
-                <p>La Paz 674, Villa Carlos Paz, Córdoba</p>
+                <p>Bv. Sarmiento, Av. Uruguay esq, X5152 Villa Carlos Paz, Córdoba</p>
               </div>
               <div class="col-md-4 info">
                 <i class="ion-ios-email-outline"></i>
