--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" title="Send Message">Enviar Mensaje</button></div>
+                <div class="text-center"><button onclick="enviarAlerta()" id="buttonMensaje"  type="submit" title="Send Message">Enviar Mensaje</button></div>
               </form>
             </div>
           </div>
