Modifiqué tamaño imágenes baños, cocinas, salas

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <img src="img/app1Baño.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Baño 1</a></h4>
-                <p>App</p>
+                <p>Baños</p>
                 <div>
                   <a href="img/app1Baño.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -287,7 +287,7 @@
               <img src="img/web3Cocina.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Cocina 3</a></h4>
-                <p>Web</p>
+                <p>Cocinas</p>
                 <div>
                   <a href="img/web3Cocina.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -301,7 +301,7 @@
               <img src="img/app2Baño.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Baño 2</a></h4>
-                <p>App</p>
+                <p>Baños</p>
                 <div>
                   <a href="img/app2Baño.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -314,8 +314,8 @@
             <div class="portfolio-wrap">
               <img src="img/card2Sala.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Card 2</a></h4>
-                <p>Card</p>
+                <h4><a href="#">Sala 2</a></h4>
+                <p>Salas</p>
                 <div>
                   <a href="img/card2Sala.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -329,7 +329,7 @@
               <img src="img/web2Cocina.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Cocina 2</a></h4>
-                <p>Web</p>
+                <p>Cocinas</p>
                 <div>
                   <a href="img/web2Cocina.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -343,7 +343,7 @@
               <img src="img/app3Baño.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Baño 3</a></h4>
-                <p>App</p>
+                <p>Baños</p>
                 <div>
                   <a href="img/app3Baño.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -357,7 +357,7 @@
               <img src="img/card1Sala.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Sala 1</a></h4>
-                <p>Card</p>
+                <p>Salas</p>
                 <div>
                   <a href="img/card1Sala.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -371,7 +371,7 @@
               <img src="img/card3Sala.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Sala 3</a></h4>
-                <p>Card</p>
+                <p>Salas</p>
                 <div>
                   <a href="img/card3Sala.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
@@ -385,7 +385,7 @@
               <img src="img/web1Cocina.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">Cocina 1</a></h4>
-                <p>Web</p>
+                <p>Cocinas</p>
                 <div>
                   <a href="img/web1Cocina.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
